@@ -538,7 +538,7 @@ AC_FUNC_REALLOC
 AC_TYPE_SIGNAL
 AC_FUNC_STAT
 AC_FUNC_UTIME_NULL
-AC_CHECK_FUNCS([nanosleep inotify_init memfrob utime execvp execvpe futimens])
+AC_CHECK_FUNCS([nanosleep inotify_init memfrob utime execvp execvpe futimes futimens utimensat])
 AC_CHECK_FUNCS([alarm atexit bzero dup2 getcwd gethostbyname gettimeofday]) 
 AC_CHECK_FUNCS([inet_ntoa localtime_r memmove memset mkdir munmap rmdir select]) 
 AC_CHECK_FUNCS([socket strchr strdup strerror strstr backtrace])
